forth/test/fail/test_local_name_numeric.af
\ Must fail to compile.
fun: .test_local_name_numeric { 1val -- err }
end
